src/objects/Apttus_Config2__ClassificationName__c.object
<CustomObject>
    <description>Represents a category</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the category is active. Inactive categories are ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidePage__c</fullName>
        <description>The name of the guide page to use for Help Me Choose</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guide Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HierarchyLabel__c</fullName>
        <description>The category label</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The category type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offering</fullName>
                    <default>true</default>
                    <label>Offering</label>
                </value>
                <value>
                    <fullName>Option Group</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__HierarchyLabel__c</columns>
        <columns>Apttus_Config2__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>